<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="email">E-mail</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="enter">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="remember_me">Запомнить меня</string>
    <string name="empty_input">Пустые данные</string>
    <string name="invalid_email">E-mail невалидный</string>
    <string name="success_authorization">Авторизация прошла успешно</string>
    <string name="invalid_data">Неверные данные</string>
    <string name="user_doest_not_exist">Такого пользователя не существует</string>
    <string name="authorization_error">Ошибка авторизации</string>
    <string name="password_dont_match">Пароли не совпадают</string>
    <string name="weak_password">Пароль слишком легкий, попробуйте его усложнить</string>
    <string name="user_already_exists">Пользователь с данным e-mail уже зарегистрирован</string>
    <string name="failed_to_create_account">Не удалось создать аккаунт.</string>
    <string name="your_name">Ваше имя</string>
    <string name="input_is_invalid">Данные введены некорректно</string>
    <string name="already_have_account">Есть аккаунт?</string>
    <string name="havent_account">Еще нет аккаунта?</string>
    <string name="name_placeholder">Имя</string>
    <string name="email_placeholder">example@example.com</string>
</resources>